--- a/Web_Dev/main.css
+++ b/Web_Dev/main.css
@@ -37,9 +37,10 @@ header {
 }
 nav li{
     display: inline-block;
-    padding: 5px 15px;
+    padding: auto;
     background: rgb(20, 20, 20);
-    color: rgb(66, 151, 66)
+    color: rgb(66, 151, 66);
+    margin: auto;
 
 }
 .row{
