--- a/main.css
+++ b/main.css
@@ -30,6 +30,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     overflow: auto;
+    height: auto;
+    width: auto;
 }
 ul,ol{
     display: block;
