--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
     height: auto;
     width: auto;
 }
-ul,ol{
+ol{
     display: block;
     text-align: left;
     background-color: antiquewhite;
@@ -118,11 +118,12 @@ header {
     padding: auto;
 }
 nav li{
-    display: inline-block;
-    padding: 5px 15px;
+    width: 20%;
+    display:inline-block;
     background: rgb(20, 20, 20);
     color: rgb(66, 151, 66);
     margin: auto;
+    margin-left: 8px;
 }
 footer{
     text-align: center;
@@ -171,3 +172,77 @@ html{
 footer{
     clear: both;
 }
+.gallery{
+    font-size: 12pt;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
+    margin-left: 1%;
+    width: 30%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+@media (max-width: 1050px) {/*for smaller screens*/
+    #banner{
+      max-width:100%; 
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
+      color:rgb(68, 17, 17);
+      font-size: 18px; 
+    }
+    body,p,.aligned{
+      /* display:block is saying 'hey, put every element on it's own line!' 
+      when we were on desktop, we wanted columns. On mobile, columns are too 
+      small. */
+      display:block; 
+      max-width:100%; 
+      font-size: 15px; 
+      color:var(--font-color); 
+      text-align:center; 
+      padding:15px;  
+    }
+    header{
+        max-width: 100%;
+        font-size: 4vw;
+        text-align: left;
+        margin: auto;
+        padding-top: 1px;
+        padding-bottom: 1px;
+    }
+    #art,#dev,.col{
+        display: block;
+        width: 80%;
+        height: 10vw;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 8px;
+        font-size: 20pt;
+        margin-bottom: 4px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .gallery{
+        display: block;
+        max-width: 100%;
+        text-align: left;
+        padding: 15px;
+        font-size: 12pt;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
+        margin-left: 20%;
+        margin-right: 20%;
+        width: 50%;
+        margin-top:15px;
+        margin-bottom: 15px;
+        overflow: visible;
+    }
+    .home, #row{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    ol,p{
+        max-width: 100%;
+        font-size: 12pt;
+        padding: 5px;
+    }
+  }
