--- a/main.css
+++ b/main.css
@@ -63,6 +63,10 @@ h1{
 }
 a {
     color: green;
+    list-style: none;
+    text-decoration: none;
+    text-transform: uppercase;
+    
 }
 p{
     background: rgb(61, 61, 61);
@@ -86,6 +90,7 @@ li{
     background-color: antiquewhite;
     margin: auto;
     color:black;
+    
 }
 #des{
     color: black;
@@ -114,18 +119,31 @@ body{
 header {
     background: rgb(39, 39, 39);
     color: white;
-    margin: auto;
-    padding: auto;
+    margin: 0%;
+    padding: 0%;
+    text-align: center;
+    
 }
-nav li{
-    width: 20%;
+nav{
+    list-style: none;
+    text-decoration: none;
+    text-transform: uppercase;
+    position: relative;
+}
+li{
     display:inline-block;
-    background: rgb(20, 20, 20);
+    margin-left: 70px;
+    font-size: 1.5vw;
+    background: rgb(39, 39, 39);
     color: rgb(66, 151, 66);
-    margin: auto;
-    margin-left: 8px;
+    text-align: center;
+    font-size: 14pt;
+    position: relative;
+    padding-top: 25px;
+    padding-bottom: 15px;
+    
 }
-footer{
+.footer{
     text-align: center;
     margin: auto;
     font-size: 12pt;
@@ -154,11 +172,10 @@ footer{
     margin: 1%;
     float: left;
     width: 31%;
-    font-size: 5vw;
+    font-size: 4vw;
     text-align: center;
-    font-family:fantasy;
     border-radius: 5px;
-    font-family: Century Gothic;
+    font-family: 'Ubuntu', sans-serif;
     color: white;
 }
 html{
@@ -176,16 +193,49 @@ footer{
     font-size: 12pt;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
     margin-left: 1%;
-    width: 30%;
+    width: 100%;
     margin-top: 15px;
     margin-bottom: 15px;
+}
+.navigation{
+    background: rgb(39, 39, 39);
+    padding-left: 0%;
+    padding-right: 0%;
+    overflow: hidden;
+    position: relative;
+}
+.shrinkToFit{
+    display: inline-block;
+    width: 40%;
+    height: 40%;
+    margin: 2%;
+    vertical-align:middle;
+    border: #333;
+    border-width: 5px;
+    border-style: inherit;
+}
+nav a:hover{
+    color: black;
+}
+nav a::before{
+    content: '';
+    display: block;
+    height: 8px;
+    width: 0%;
+    background-color: green;
+    position: absolute;
+    top: 0;
+    transition: all ease-in-out 200ms;
+}
+nav a:hover::before{
+    width: 100%;
 }
 @media (max-width: 1050px) {/*for smaller screens*/
     #banner{
       max-width:100%; 
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
       color:rgb(68, 17, 17);
-      font-size: 18px; 
+      font-size: 6vw; 
     }
     body,p,.aligned{
       /* display:block is saying 'hey, put every element on it's own line!' 
@@ -198,13 +248,25 @@ footer{
       text-align:center; 
       padding:15px;  
     }
+    .shrinkToFit{
+        width: 75%;
+        height: 75%;
+    }
     header{
         max-width: 100%;
-        font-size: 4vw;
+        font-size: 1vw;
         text-align: left;
-        margin: auto;
-        padding-top: 1px;
-        padding-bottom: 1px;
+        margin: auto;   
+        overflow: hidden; 
+    }
+    .navigation{
+        display: block;
+        background: rgb(39, 39, 39);
+        font-size: 1vw;
+        padding-left: 0%;
+        padding-right: 0%;
+        overflow: hidden;
+        list-style: none;
     }
     #art,#dev,.col{
         display: block;
@@ -213,7 +275,7 @@ footer{
         margin-left: 10%;
         margin-right: 10%;
         margin-top: 8px;
-        font-size: 20pt;
+        font-size: 8vw;
         margin-bottom: 4px;
         position: relative;
         display: flex;
@@ -227,9 +289,9 @@ footer{
         padding: 15px;
         font-size: 12pt;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
-        margin-left: 20%;
-        margin-right: 20%;
-        width: 50%;
+        margin-right: 1%;
+        margin-left: 1%;
+        width: 85%;
         margin-top:15px;
         margin-bottom: 15px;
         overflow: visible;
