--- a/main.css
+++ b/main.css
@@ -1,30 +1,35 @@
 body {
-    background:#999;
-    background-image:url(images/parsley.jpg);
+    background: #999;
+    background-image: url(images/parsley.jpg);
     background-size: 200%;
     background-blend-mode: soft-light;
     background-position-y: 1vw;
     background-position-x: 0vw;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
     overflow: auto;
+}
 
-}
-.heading{
-    width:900px;
-    height:250px;
+.heading {
+    width: 900px;
+    height: 250px;
     margin: auto;
-    position:absolute;
-    top: 0px; bottom: 0px; right: 0px; left: 0px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
-.title1{
+
+.title1 {
     display: block;
     text-align: center;
     color: white;
     font-size: 60pt;
     font-family: big john;
 }
-#banner{
-    background-image:url(images/Banner.gif);
+
+#banner {
+    background-image: url(images/Banner.gif);
     background-position-x: center;
     background-position-y: 40%;
     background-repeat: no-repeat;
@@ -33,85 +38,95 @@ body {
     height: auto;
     width: auto;
 }
-ol{
+
+ol {
     display: block;
     text-align: left;
     background-color: antiquewhite;
     margin-left: 10%;
     margin-right: 10%;
 }
-h2,p 
-{
+
+h2,
+p {
     padding: 0px 25px;
-    color:rgb(68, 17, 17);
+    color: rgb(68, 17, 17);
     border: #333;
     margin: auto;
     text-align: center;
     border-style: groove;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
 }
-h1{
+
+h1 {
     padding: 0px 25px;
-    color:rgb(68, 17, 17);
+    color: rgb(68, 17, 17);
     border: #333;
     margin: auto;
     text-align: center;
     font-size: 60pt;
-    font-family:monospace;
+    font-family: monospace;
     border-style: groove;
-
 }
+
 a {
     color: green;
     list-style: none;
     text-decoration: none;
     text-transform: uppercase;
-    
 }
-p{
+
+p {
     background: rgb(61, 61, 61);
     color: white;
     padding: 20px;
 }
 
-#normal,ol,ul{
+#normal,
+ol,
+ul {
     display: block;
     text-align: left;
     background-color: antiquewhite;
     background: antiquewhite;
     margin: auto;
-    color:black;
+    color: black;
     border: #333;
     border-style: groove;
 }
-li{
+
+li {
     display: block;
     text-align: left;
     background-color: antiquewhite;
     margin: auto;
-    color:black;
-    
+    color: black;
 }
-#des{
+
+#des {
     color: black;
     background-color: antiquewhite;
     margin-left: 0;
     width: 30%;
     overflow: auto;
 }
+
 .secondary {
     background: black;
-    color: rgb(255, 73, 73); 
+    color: rgb(255, 73, 73);
 }
+
 #special {
     background: green;
     color: white;
     margin: auto;
 }
-#link{
+
+#link {
     color: white;
 }
-body{
+
+body {
     margin-left: 6%;
     margin-right: 6%;
 }
@@ -122,16 +137,17 @@ header {
     margin: 0%;
     padding: 0%;
     text-align: center;
-    
 }
-nav{
+
+nav {
     list-style: none;
     text-decoration: none;
     text-transform: uppercase;
     position: relative;
 }
-li{
-    display:inline-block;
+
+li {
+    display: inline-block;
     margin-left: 70px;
     font-size: 1.5vw;
     background: rgb(39, 39, 39);
@@ -141,30 +157,34 @@ li{
     position: relative;
     padding-top: 25px;
     padding-bottom: 15px;
-    
 }
-.footer{
+
+.footer {
     text-align: center;
     margin: auto;
     font-size: 12pt;
 }
-.aligned{
+
+.aligned {
     display: flex;
     align-items: center;
     background: antiquewhite;
     border: #333;
     border-style: groove;
 }
-#dev{
-    background-image:url(images/developer.png); 
+
+#dev {
+    background-image: url(images/developer.png);
 }
-#art{
-    background-image:url(images/ship_crop.jpg);  
+
+#art {
+    background-image: url(images/ship_crop.jpg);
     background-position: center;
 }
-.col{
+
+.col {
     background: #333;
-    background-image:url(images/mango_crop.jpg);
+    background-image: url(images/mango_crop.jpg);
     background-position: auto;
     background-blend-mode: soft-light;
     background-size: 100%;
@@ -178,18 +198,22 @@ li{
     font-family: 'Ubuntu', sans-serif;
     color: white;
 }
-html{
+
+html {
     overflow: auto;
 }
-.box{
+
+.box {
     overflow: hidden;
     display: block;
     background: antiquewhite;
 }
-footer{
+
+footer {
     clear: both;
 }
-.gallery{
+
+.gallery {
     font-size: 12pt;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
     margin-left: 1%;
@@ -197,27 +221,31 @@ footer{
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.navigation{
+
+.navigation {
     background: rgb(39, 39, 39);
     padding-left: 0%;
     padding-right: 0%;
     overflow: hidden;
     position: relative;
 }
-.shrinkToFit{
+
+.shrinkToFit {
     display: inline-block;
     width: 40%;
     height: 40%;
     margin: 2%;
-    vertical-align:middle;
+    vertical-align: middle;
     border: #333;
     border-width: 5px;
     border-style: inherit;
 }
-nav a:hover{
+
+nav a:hover {
     color: black;
 }
-nav a::before{
+
+nav a::before {
     content: '';
     display: block;
     height: 8px;
@@ -227,39 +255,44 @@ nav a::before{
     top: 0;
     transition: all ease-in-out 200ms;
 }
-nav a:hover::before{
+
+nav a:hover::before {
     width: 100%;
 }
-@media (max-width: 1050px) {/*for smaller screens*/
-    #banner{
-      max-width:100%; 
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
-      color:rgb(68, 17, 17);
-      font-size: 6vw; 
+
+@media (max-width: 1050px) {
+    /*for smaller screens*/
+    #banner {
+        max-width: 100%;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifl;
+        color: rgb(68, 17, 17);
+        font-size: 6vw;
     }
-    body,p,.aligned{
-      /* display:block is saying 'hey, put every element on it's own line!' 
+    body,
+    p,
+    .aligned {
+        /* display:block is saying 'hey, put every element on it's own line!' 
       when we were on desktop, we wanted columns. On mobile, columns are too 
       small. */
-      display:block; 
-      max-width:100%; 
-      font-size: 15px; 
-      color:var(--font-color); 
-      text-align:center; 
-      padding:15px;  
+        display: block;
+        max-width: 100%;
+        font-size: 15px;
+        color: var(--font-color);
+        text-align: center;
+        padding: 15px;
     }
-    .shrinkToFit{
+    .shrinkToFit {
         width: 75%;
         height: 75%;
     }
-    header{
+    header {
         max-width: 100%;
         font-size: 1vw;
         text-align: left;
-        margin: auto;   
-        overflow: hidden; 
+        margin: auto;
+        overflow: hidden;
     }
-    .navigation{
+    .navigation {
         display: block;
         background: rgb(39, 39, 39);
         font-size: 1vw;
@@ -267,8 +300,12 @@ nav a:hover::before{
         padding-right: 0%;
         overflow: hidden;
         list-style: none;
+        max-width: 100%;
+        width: 100%;
     }
-    #art,#dev,.col{
+    #art,
+    #dev,
+    .col {
         display: block;
         width: 80%;
         height: 10vw;
@@ -282,7 +319,7 @@ nav a:hover::before{
         align-items: center;
         justify-content: center;
     }
-    .gallery{
+    .gallery {
         display: block;
         max-width: 100%;
         text-align: left;
@@ -292,19 +329,29 @@ nav a:hover::before{
         margin-right: 1%;
         margin-left: 1%;
         width: 85%;
-        margin-top:15px;
+        margin-top: 15px;
         margin-bottom: 15px;
         overflow: visible;
     }
-    .home, #row{
+    .home,
+    #row {
         position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    ol,p{
+    ol,
+    p {
         max-width: 100%;
         font-size: 12pt;
         padding: 5px;
     }
-  }
+    li {
+        max-width: 100%;
+        width: 100%;
+        margin-left: 5%;
+        font-size: small;
+        padding: 2%;
+        text-align: left;
+    }
+}
